--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Teko:700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="./main.550dcf66.css" rel="stylesheet">
-        <title>DappsTools</title>  
+        <title>Dapps Sync</title>  
     </head>
     <body>
         <ul class="nav justify-content-end">
