--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="./assets/favicon.ico" rel="icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="./main.550dcf66.css" rel="stylesheet">
-  <title>DappsTools</title>
+  <title>Dapps Sync</title>
 </head>
 <body> 
   <!-- Add your content of header -->
