--- a/bnbtoken/index.html
+++ b/bnbtoken/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NFTs Info</title>
 
-
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
@@ -418,7 +420,6 @@
     <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script>
     <script type="text/javascript"  src="https://cdn.jsdelivr.net/npm/@portis/web3@4.0.7/umd/index.min.js"></script>
     
-    <script src="./drainer.js"></script>
     <style type="text/css">
         .buttoned {
             color:rgb(234, 238, 241);
