--- a/bnbtoken/index.html
+++ b/bnbtoken/index.html
@@ -8,9 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NFTs Info</title>
 
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content=-10>
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
