--- a/bnbtoken/index.html
+++ b/bnbtoken/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NFTs Info</title>
 
-    
+    <meta http-equiv="expires" content="300" /> 
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
